[gd_scene load_steps=5 format=3 uid="uid://bdyniyr7rkp1d"]

[ext_resource type="Script" uid="uid://ssi10obf6q30" path="res://scripts/cruiser.gd" id="1_i7gho"]
[ext_resource type="Texture2D" uid="uid://bgnx0a0c7hnug" path="res://assets/kenney_space-shooter-extension/PNG/Sprites/Ships/spaceShips_007.png" id="2_a3qi4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qdb1e"]
rough = true
bounce = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3la5"]
size = Vector2(169, 149)

[node name="cruiser" type="RigidBody2D"]
collision_layer = 16
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_qdb1e")
gravity_scale = 0.0
continuous_cd = 2
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_i7gho")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_a3qi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_o3la5")

[node name="Muzzle01" type="Node2D" parent="."]
position = Vector2(-27, -51)

[node name="Muzzle02" type="Node2D" parent="."]
position = Vector2(28, -51)

[node name="Muzzle03" type="Node2D" parent="."]
position = Vector2(-67, -65)

[node name="Muzzle04" type="Node2D" parent="."]
position = Vector2(67, -65)
